--- a/css/style.css
+++ b/css/style.css
@@ -126,17 +126,16 @@ body {
   padding-bottom: 0px;
 }
 /*header*/
+.line-head {
+  max-width: 1600px;
+  border-bottom: 1px solid #ececec;
+}
+/*line*/
 .site-head {
   display: flex;
   justify-content: space-between;
-  height: 80px;
 }
-/*line*/
-.line {
-  border-bottom: 1px solid #ececec;
-  max-width: 1600px;
-  height: 0;
-}
+
 /*navigation*/
 
 .nav,
@@ -160,10 +159,12 @@ body {
 .logo .logo-slice {
   color: var(--accent-color);
 }
+.nav .address {
+}
 .nav .logo {
   display: block;
   padding-top: 24px;
-  padding-bottom: 25px;
+  padding-bottom: 24px;
   margin-right: 93px;
 }
 .site-nav .link {
@@ -218,10 +219,12 @@ body {
   background: var(--header-footer-fon);
   /*max-width: 1600px;*/
   min-height: 600px;
-  display: flex;
-  justify-content: center;
+  padding: 200px 0;
+
+  /*display: flex;
+   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: column; */
 }
 .hero-title {
   color: var(--primery-white-color);
@@ -230,6 +233,11 @@ body {
   line-height: 1.4;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+.hero-title,
+.hero-container {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*sections*/
