--- a/css/style.css
+++ b/css/style.css
@@ -216,10 +216,18 @@ body {
 }
 .hero {
   text-align: center;
-  background: var(--header-footer-fon);
-  /*max-width: 1600px;*/
+  max-width: 1600px;
   min-height: 600px;
   padding: 200px 0;
+  background-color: var(--header-footer-fon);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/owerlay.jpg);
+  background-size: cover;
+  background-position: center;
 
   /*display: flex;
    justify-content: center;
@@ -277,14 +285,17 @@ body {
 .f-item:not(:first-child) {
   margin-left: 30px;
 }
-.img-list {
+/* .img-list {
   justify-content: space-between;
+} */
+.i-item:not(:first-child) {
+  margin-left: 30px;
 }
 
 /*TEAM*/
-.team {
+/* .team {
   justify-content: space-between;
-}
+} */
 .team .title {
   color: var(--title-text-color);
   font-weight: 500;
@@ -296,6 +307,9 @@ body {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.2;
+}
+.t-item:not(:first-child) {
+  margin-left: 30px;
 }
 .employee {
   width: 270px;
