--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ body {
   letter-spacing: 0.03em;
   min-width: 78px;
   padding: 6px 22px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 .button.primary:focus,
@@ -360,6 +361,9 @@ body {
 .card {
   text-decoration: none;
   display: block;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .projects .card {
   border: 1px solid #eeeeee;
