--- a/css/style.css
+++ b/css/style.css
@@ -211,13 +211,16 @@ body {
   display: flex;
   align-items: center;
 }
+.envelope-item {
+  color: inherit;
+}
 .envelope {
   margin-right: 10px;
   width: 16px;
   height: 12px;
   fill: currentColor;
 }
-.icon-smartphone {
+.smartphone {
   margin-right: 10px;
   width: 10px;
   height: 16px;
@@ -233,7 +236,8 @@ body {
   width: 16px;
   background-image: url(../img/icons/envelope.svg);
 } */
-.envelope:hover {
+.envelope:hover,
+.smartphone:hover {
   fill: var(--accent-color);
 }
 .contacts .link:hover,
@@ -321,10 +325,20 @@ body {
 /* .img-list {
   justify-content: space-between;
 } */
-.i-item:not(:first-child) {
-  margin-left: 30px;
+.f-icon {
+  padding: 25px 100px;
+  margin-bottom: 30px;
+  background: #f5f4fa;
+  border-radius: 4px;
 }
-
+.f-svg {
+  width: 70px;
+  height: 70px;
+}
+/*technology*/
+.i-item:not(:last-child) {
+  margin-right: 30px;
+}
 /*TEAM*/
 /* .team {
   justify-content: space-between;
@@ -344,6 +358,7 @@ body {
   font-size: 16px;
   line-height: 1.2;
 }
+.clns:not(:first-child),
 .t-item:not(:first-child) {
   margin-left: 30px;
 }
@@ -360,27 +375,32 @@ body {
   padding-left: 32px;
   padding-right: 32px;
   margin-top: 16px;
-  outline: 1px solid red;
 }
 .soc-lnk {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   width: 44px;
   height: 44px;
-}
-.tw {
-  background-image: url(../img/icons/Ellipse.svg);
+  fill: #afb1b8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.tw:hover {
+.soc-lnk:hover {
   background-color: var(--accent-color);
+  fill: #ffffff;
   border-radius: 50%;
+  width: 44px;
+  height: 44px;
 }
 .soc-icon {
 }
 .soc-icon:not(:first-child) {
   margin-left: 10px;
+}
+.soc-svg {
+  justify-content: center;
+  width: 20px;
+  height: 20px;
 }
 /*BLOCK фильтр по кнопкам*/
 .box-flt {
@@ -388,6 +408,31 @@ body {
 }
 .filter-item:not(:last-child) {
   margin-right: 8px;
+}
+/*BLOCK clients*/
+.logotipes {
+  display: flex;
+}
+.clns {
+  width: 170px;
+  height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+.clns:hover {
+  fill: var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
+.clns > svg {
+  fill: var(--accent-color);
+}
+.yaco-svg {
+  fill: #afb1b8;
+  height: 44px;
+  width: 49px;
 }
 /*BLOCK Projects примеры проектов*/
 .projects {
