--- a/css/style.css
+++ b/css/style.css
@@ -422,17 +422,15 @@ body {
   border: 1px solid #afb1b8;
   border-radius: 4px;
 }
-.clns:hover {
+.svg:hover {
   fill: var(--accent-color);
+}
+.clns:hover {
   border: 1px solid var(--accent-color);
 }
-.clns > svg {
-  fill: var(--accent-color);
-}
-.yaco-svg {
+
+.svg {
   fill: #afb1b8;
-  height: 44px;
-  width: 49px;
 }
 /*BLOCK Projects примеры проектов*/
 .projects {
@@ -451,7 +449,10 @@ body {
 }
 .project-item {
   display: block;
-  border: 1px solid #eeeeee;
+}
+.project-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .projects .title {
   color: var(--title-text-color);
@@ -486,9 +487,9 @@ body {
 }
 .card-content {
   padding: 20px 24px;
-  /*border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;*/
+  border-right: 1px solid #eeeeee;
 }
 /*footer*/
 .footer {
